# ai-computer

./: .gitignore  LICENSE  README.md  build-overlay.bat  package-lock.json  package.json
demos/: aim-check.js  aim-hold.js  capture-overlay.js  notepad-overlay.js  notepad.js  showcase.js  visual-only.js  wechat-aim.js  wechat-moments-2.js  wechat-moments-3.js  wechat-moments.js  wechat-scan-sidebar.js  wechat-sidebar-ruled.js  wechat-sidebar-zoom.js  wechat-test.js
overlay/.cargo/: config.toml
overlay/src/: index.html  main.js  style.css
overlay/src-tauri/: Cargo.toml  tauri.conf.json
overlay/src-tauri/src/: lib.rs  main.rs
scripts/: check-toolchain.js  debug-overlay.js  install-overlay.js  make-icon.ps1  postinstall.js  sp-call.js  sp-shell.js
skills/: SKILL.md
src/: index.js
src/cli/: bin.js
src/core/: index.js  overlay.js  ui-tree.js  viewport.js
src/mcp/: server.js
src/native/: ui-tree.ps1  win32.js
