[package]
name = "screenpilot-overlay"
version = "0.0.1"
description = "Translucent breathing-glow overlay shown while screenpilot is actively driving the desktop."
edition = "2021"
rust-version = "1.77"
authors = ["N0ts <mail@n0ts.top>"]
license = "MIT"

[lib]
name = "screenpilot_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Global Esc key — listens process-wide so it triggers even when the
# click-through overlay can't receive WebView keyboard events.
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-global-shortcut = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[workspace]
# Standalone — refuse to join any parent workspace.
